--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=TopDownWorkshop
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/Levels/Menu/Menu.Menu
+GameDefaultMap=/Game/Levels/Menu/Menu.Menu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
+GlobalDefaultGameMode=/Game/Levels/Menu/GM_Menu.GM_Menu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
